# PicoLED

./: CMakeLists.txt  README.md  led.c
.github/workflows/: ci.yml
algorithms/: algorithms.c  algorithms.h
controlpanel/: astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs
controlpanel/src/components/: Button.tsx  Container.astro  Dropdown.tsx  Input.tsx
controlpanel/src/layouts/: Page.astro
controlpanel/src/pages/: index.astro
dhcpserver/: dhcpserver.c  dhcpserver.h
dnsserver/: dnsserver.c  dnsserver.h
httpserver/: data.h  httpserver.c  httpserver.h
led_effects/: led_effects.c  led_effects.h
storage/: storage.c  storage.h
